--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -6,6 +6,25 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   margin-top: 0; }
 
+h2 {
+  font-size: 30px; }
+
+.btn {
+  display: inline-block;
+  border: 2px solid #5b56dc;
+  padding: 10px 30px;
+  color: #5b56dc;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  transition: all 0.15s ease-in-out; }
+  .btn:hover {
+    background: #5b56dc;
+    color: #fff; }
+
+.center {
+  text-align: center; }
+
 header.site-header {
   padding: 50px 0 75px;
   background-color: #686de0;
