--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,30 @@ h1,h2,h3,h4,h5,h6 {
   margin-top: 0;
 }
 
+h2 {
+  font-size: 30px;
+}
+
+.btn {
+  display: inline-block;
+  border: 2px solid #5b56dc;
+  padding: 10px 30px;
+  color: #5b56dc;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  transition: all 0.15s ease-in-out;
+
+  &:hover {
+    background: #5b56dc;
+    color: #fff;
+  }
+} // a
+
+.center {
+  text-align: center;
+}
+
 header.site-header {
   padding: 50px 0 75px;
   background-color: #686de0;
