--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box; }
+
 body {
   font-family: 'Open Sans', sans-serif; }
+
+img {
+  max-width: 100%;
+  height: auto; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
@@ -35,8 +42,8 @@ header.site-header {
     text-align: center; }
 
 .container {
-  width: 100%;
-  max-width: 1140px;
+  width: 1140px;
+  max-width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
