--- a/src/scss/single-post.css
+++ b/src/scss/single-post.css
@@ -1,8 +1,8 @@
 .single-post {
   width: 600px;
   max-width: 100%;
-  margin: 0 auto 50px auto;
-  padding: 0 0 50px;
+  margin: 0 auto 40px auto;
+  padding: 0 0 40px;
   position: relative;
   text-align: center; }
   .single-post:last-child {
@@ -23,7 +23,9 @@
     width: 100%;
     height: 200px;
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
   .single-post h3 {
     margin: 16px 0;
     font-size: 20px; }
