--- a/src/scss/single-post.scss
+++ b/src/scss/single-post.scss
@@ -1,8 +1,8 @@
 .single-post {
   width: 600px;
   max-width: 100%;
-  margin: 0 auto 50px auto;
-  padding: 0 0 50px;
+  margin: 0 auto 40px auto;
+  padding: 0 0 40px;
   position: relative;
   text-align: center;
 
@@ -28,6 +28,8 @@
     height: 200px;
     background-size: cover;
     background-position: center;
+    background-color: rgba(#000, 0.5);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
 
   h3 {
