--- a/src/scss/last-commit.scss
+++ b/src/scss/last-commit.scss
@@ -1,7 +1,8 @@
 .last-commit {
   p {
     color: #fff;
-    font-size: 14px;
+    font-weight: 600;
+    font-size: 18px;
     margin: 0 0 5px;
   }
 
