--- a/src/scss/textblock.css
+++ b/src/scss/textblock.css
@@ -4,5 +4,11 @@ section.intro-section {
   max-width: 100%;
   margin: 0 auto;
   padding: 50px 0; }
+  @media (max-width: 768px) {
+    section.intro-section {
+      padding: 25px; } }
   section.intro-section p {
     font-size: 18px; }
+    @media (max-width: 768px) {
+      section.intro-section p {
+        font-size: 16px; } }
