--- a/src/scss/textblock.scss
+++ b/src/scss/textblock.scss
@@ -4,8 +4,14 @@ section.intro-section {
   max-width: 100%;
   margin: 0 auto;
   padding: 50px 0;
+  @media( max-width: 768px ) {
+    padding: 25px;
+  }
 
   p {
     font-size: 18px;
+    @media( max-width: 768px ) {
+      font-size: 16px;
+    }
   }
 }
